fixing horizontal scroll bug

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -5,7 +5,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    right: 30%;
+    // overflow-x: hidden; 
     &::before {
         position: absolute;
         content: "";
